--- a/assets/stylesheets/bestest_timer.css
+++ b/assets/stylesheets/bestest_timer.css
@@ -3,7 +3,7 @@
     height: 30px;
     background-color: white;
     border: 0px;
-    margin-right: 5px
+    margin-right: 5px;
     border-radius: 5px;
 }
 
